<resources>
  <string name="airbnb_label_eula">By signing up, I agree to Airbnb\'s Terms of Service, Payments Terms of
    Service, Privacy Policy, Guest Refund Policy
  </string>
  <string name="app_name">OK Android</string>
  <string name="detail_view_text">This is a detail view</string>
  <string name="default_transition">Default transition</string>
  <string name="circular_reveal_transition">Circular reveal transition</string>
  <string name="show_transition">Show transition</string>
  <string name="show_now_transition">Show now transition</string>
  <string name="enter_your_phone">Enter your phone</string>
  <string name="register_button_sendsms">Send SMS</string>
  <string name="register_title_phone">Enter your phone number</string>
  <string name="verfiy_tryagain">Not received? You can try again</string>
  <string name="verify_pin">Enter the PIN</string>
  <string name="shortcut_android">#tags</string>
  <string name="airbnb_label_login">Login</string>
  <string name="airbnb_label_showpassword">Show</string>
  <string name="airbnb_edit_email">Email</string>
  <string name="airbnb_edit_password">Password</string>
  <string name="airbnb_button_moreoptions">More options</string>
  <string name="airbnb_button_register">Create account</string>
  <string name="airbnb_button_facebook">Continue with Facebook</string>
  <string name="airbnb_label_welcome">Welcome to AirBNB</string>
  <string name="airbnb_label_logo">Logo</string>
  <string name="rx_button_wait">Wait</string>
  <string name="rx_checkbox_checkme">Check Me</string>
  <string name="rx_button_crash">Crash</string>
  <string name="rx_edit_time">09:42</string>
  <string name="rx_label_result">TextView</string>
  <string name="rx_label_country">Country</string>
  <string name="rx_label_widgets">Widgets</string>
  <string name="airbnb_title">Airbnb Login</string>
  <string name="detail_title">Detail Screen</string>
  <string name="rx_title">Rx Playground</string>
  <string name="rx_screen_title">Android Features</string>
  <string name="verification_title">Verify your phone number</string>
  <string name="update">Update</string>
  <string name="updating">Updating</string>
  <string name="pri_title">Article</string>
</resources>
