<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/airbnb_label_login"
        android:text="@string/airbnb_label_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/airbnb_image_showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/airbnb_edit_password"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/airbnb_showpassword"/>

    <TextView
        android:id="@+id/airbnb_label_showpassword"
        android:text="@string/airbnb_label_showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/airbnb_image_showpassword"
        app:layout_constraintEnd_toStartOf="@+id/airbnb_image_showpassword"
        app:layout_constraintTop_toTopOf="@+id/airbnb_image_showpassword"
        app:layout_constraintVertical_bias="1.0"/>

    <EditText
        android:id="@+id/airbnb_edit_email"
        android:text="@string/airbnb_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airbnb_label_login"/>

    <EditText
        android:id="@+id/airbnb_edit_password"
        android:text="@string/airbnb_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airbnb_edit_email"
        app:layout_constraintVertical_bias="0.139"/>
</android.support.constraint.ConstraintLayout>